--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.17.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>4.3.19.RELEASE</version>
-        </dependency>
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-core</artifactId>
+	  <version>[4.3.20,)</version>
+	</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
